# dec-refrigerator

./: README.md
contracts/: FridgeManager.sol
flutter/: README.md  pubspec.yaml
flutter/android/app/: build.gradle
flutter/ios/Runner/: Info.plist
flutter/ios/Runner.xcodeproj/: project.pbxproj
flutter/lib/: app_state.dart  index.dart  main.dart
flutter/lib/backend/api_requests/: api_calls.dart
flutter/lib/custom_code/actions/: check_u_r_l.dart  generate_account.dart  index.dart  login_with_mnemonic.dart  sign_blockchain_transaction.dart  split_string.dart
flutter/lib/flutter_flow/: custom_functions.dart
flutter/lib/flutter_flow/nav/: nav.dart
flutter/lib/form/addlist_page/: addlist_page_model.dart  addlist_page_widget.dart
flutter/lib/form/register_page/: register_page_model.dart  register_page_widget.dart
flutter/lib/form/set_page/: set_page_model.dart  set_page_widget.dart
flutter/lib/form/trans_page/: trans_page_model.dart  trans_page_widget.dart
flutter/lib/form/uselist_page/: uselist_page_model.dart  uselist_page_widget.dart
flutter/lib/pages/information_page/: information_page_model.dart  information_page_widget.dart
flutter/test/: widget_test.dart
flutter/web/: index.html
pygeth/: main.py  pyproject.toml
pygeth/notebooks/: example_json.ipynb  py_geth.ipynb  simple_api.ipynb  web3py.ipynb
python/: main.py  pyproject.toml
python/api/: __init__.py
python/database/: __init__.py
python/datatypes/: __init__.py
python/notebooks/: const.py  simple_api.ipynb
solidity/: FridgeManager.sol
(+19 files in other folders)
