[project]
name = "pygeth"
version = "0.1.0"
description = "pygeth"
authors = [{ name = "pytree", email = "houjunqimail@gmail.com" }]
dependencies = ["py-geth>=5.1.0", "jupyterlab>=4.3.3", "fastapi>=0.115.6", "uvicorn>=0.32.1", "web3>=7.6.0", "pyinstaller>=6.11.1"]
requires-python = "==3.12.4"
readme = "README.md"
# license = { text = "MIT" }


[tool.pdm]
distribution = false

[tool.ruff.per-file-ignores]
"*.ipynb" = ["F401"]
